--- a/server/config/.env
+++ b/server/config/.env
@@ -1,5 +1,5 @@
 NODE_ENV = development
 PORT=3001
-MONGO_DB_URL=mongodb+srv://Dota2BotAdmin:dota2botadmin@cluster0-vvhtz.mongodb.net/catalogue
+MONGO_DB_URL=mongodb+srv://Olexandr:<gujlovsblo1>@cluster0.1vfjv.mongodb.net/catalogue?retryWrites=true&w=majority
 SECRET=sadsadasdsadsadsadsdsad
 ADMIN=superuser
