--- a/server/config/.env
+++ b/server/config/.env
@@ -1,5 +1,5 @@
 NODE_ENV = development
 PORT=3001
-MONGO_DB_URL=mongodb+srv://Olexandr:<gujlovsblo1>@cluster0.1vfjv.mongodb.net/catalogue?retryWrites=true&w=majority
+MONGO_DB_URL=mongodb+srv://Olexandr:gujlovsblo1@cluster0.1vfjv.mongodb.net/catalogue
 SECRET=sadsadasdsadsadsadsdsad
 ADMIN=superuser
